# TextCtrl-Translate

./: .gitignore  README.md  environment.lock.yml  environment.yml  infer.sh  inference.py  inference_sh.py  ori_inference.py  pyproject.toml  requirements.txt  tc3_environment.txt  train.py  visualize_results.py
configs/: inference.yaml  k2k_train.yaml  train.yaml
example/: i_s.txt  i_t.txt
preglyph/: dataloader.py  modules.py  pretrain.py  utils.py  words.txt
preglyph/configs/: GlyphTrain.yaml
prestyle/: dataset.py  extractors.py  model.py  train.py  trainer.py
prestyle/configs/: StyleTrain.yaml
src/dataset/: textdata.py
src/trainer/: Base.py  k2k_Base.py
