[project]
name = "textctrl-translate"
version = "0.1.0"
description = ""
authors = [
    {name = "Ea1234",email = "leesj6717@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "torch (==2.5.1)",
    "pillow (==9.5.0)",
    "numpy (==1.24.4)",
    "torchvision (==0.20.1)",
    "tqdm (==4.66.4)",
    "pytorch-lightning (==1.9.1)",
    "einops (==0.8.0)",
    "omegaconf (==2.3.0)",
    "requests (==2.31.0)",
    "huggingface-hub (==0.23.0)",
    "transformers (==4.41.0)",
    "timm (==0.9.16)",
    "matplotlib (==3.7.5)",
    "opencv-python (==4.9.0.80)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
